--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 * {
   margin: 0px;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 
 header {
-  background: #4E5AC5;
+  background: #4e5ac5;
   /* width: 100%; */
   z-index: 9;
   position: sticky;
@@ -65,8 +65,7 @@ header {
   border: none;
 }
 
-
-section {
+.hero {
   width: 100%;
   height: 100vh;
   /* position: relative; */
@@ -74,7 +73,7 @@ section {
   background-size: cover;
 }
 
-.hero {
+.introduction {
   /* position: absolute; */
   width: 100%;
   height: 100%;
@@ -84,14 +83,13 @@ section {
   );
 }
 
-
 .introBox {
   position: absolute;
   width: 100%;
   height: 93vh;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
 }
 
 .introBox > .intro {
@@ -138,7 +136,6 @@ section {
 }
 
 /* First Section */
-
 
 .about {
   display: flex;
@@ -236,37 +233,35 @@ section {
   margin-top: 10px;
 }
 
-
-/* Second Section */
-
-.container {
-  /* height: 100vh; */
+/* Project Section */
+.project {
   display: flex;
-  /* justify-content: center; */
   align-items: center;
-  padding: 30px 150px;
+  justify-content: center;
+}
+.container {
+  display: flex;
+  align-items: center;
+  /* padding: 30px 150px; */
+  width: 72%;
   flex-direction: column;
 }
-.projectHeading {
+.container > h1 {
   flex: 0.2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 15px;
+  margin-top: 50px;
 }
 
-.projectText {
+.container > p {
   margin-top: 20px;
-    /* padding: 0px 50px; */
-    text-align: center;
-    font-size: 1.25rem;
-    font-weight: 300;
-    padding-bottom: 40px;
-}
-
-.projectText > p {
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 300;
+  padding-bottom: 40px;
   color: gray;
 }
 
@@ -300,8 +295,10 @@ section {
   justify-content: flex-start;
   padding: 10px;
 }
-.description > .logo {
+.description > i {
   flex: 0.08;
+  font-size: 26px;
+  color: rgb(13, 187, 187);
 }
 
 .description > .sec {
@@ -324,12 +321,12 @@ section {
 .pricing {
   background-color: rgb(61, 69, 180);
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
 
-.pricing > .heading {
+.container > .pricing-desc {
   flex: 0.2;
   display: flex;
   flex-direction: column;
@@ -338,30 +335,32 @@ section {
   text-align: center;
   color: white;
   font-size: 15px;
-  padding: 0 20%;
+  /* padding: 0 20%; */
   margin-top: 50px;
+  margin-bottom: 30px;
 }
 
-.pricing > .heading > .heading__desc {
+.container > .pricing-desc > p {
   padding-top: 20px;
 }
 
-.pricing > .price__tiles {
+.price__tiles {
   flex: 0.6;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 50px;
 }
 
 .price__tiles > .tile {
-  width: 280px;
-  height: 450px;
+  width: 300px;
+  height: 500px;
   /* position: relative; */
   background: url(img/image1.jpg);
   background-size: cover;
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .price__tiles > .tile > .content {
@@ -390,7 +389,7 @@ section {
   font-size: 14px;
 }
 
-.content > .tag {
+.content > h1 {
   flex: 0.15;
   display: flex;
   justify-content: center;
@@ -410,16 +409,16 @@ section {
   margin: 10px;
 }
 
-.content > .amount {
+.content > p {
   flex: 0.2 !important;
   font-size: 40px;
 }
 
-.content > .amount > .number {
+.content > p > span {
   font-size: 60px;
 }
 
-.content > .buynow {
+.content > button {
   padding: 10px 20px;
   font-size: 80%;
   background-color: transparent;
@@ -427,29 +426,39 @@ section {
   border: 1px solid white;
 }
 
-/* Fourth Section */
+/* Member Section */
 
-.container1 {
+.member {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .container1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   text-align: center;
   padding: 3% 15%;
-}
+} */
 
-.team > .heading {
+.container > .heading {
   font-size: 15px;
   width: 100%;
   flex: 0.2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
 }
 
-.team > .heading > p {
+.container > .heading > p {
   margin-top: 15px;
   color: grey;
+  text-align: center;
 }
 
-.team > .members {
+.container > .members {
   width: 100%;
   height: auto !important;
   flex: 0.8;
@@ -457,20 +466,24 @@ section {
   flex-direction: column;
 }
 
-.members > .mem {
+.container > .mem {
   width: 100%;
-  display: flex;
+  /* display: flex; */
   margin: 20px 0;
 }
 
-.members > .members__row {
+.container > .members__row {
   flex: 0.5;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
 }
 .mem > .m {
   flex: 0.5;
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .mem > .m > img {
@@ -490,6 +503,7 @@ section {
   justify-content: flex-start;
   align-items: flex-start;
   text-align: left;
+  margin-right: 10px;
 }
 
 .mem > .m > .des > .name {
@@ -533,27 +547,29 @@ section {
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
-.main > .title {
+.container > h1 {
   flex: 0.1;
-  font-size: 15px;
+  font-size: 2.25rem;
+  /* font-size: 15px; */
 }
 
-.main > .description {
+.container > p {
   flex: 0.1;
-  font-size: 15px;
+  font-size: 1.25rem;
+  font-weight: 300;
   text-align: center;
 }
 
-.main > .userForm {
+.container > .userForm {
   margin-top: 30px;
   flex: 0.5;
   display: flex;
-  min-height: 55%;
-  min-width: 65%;
+  min-height: 50%;
+  width: 100%;
   border: 1px solid transparent;
   border-radius: 5px;
   background-color: white;
