--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ header {
   width: 100%;
   height: 100vh;
   /* position: relative; */
-  background-image: url("/img/background.jpg");
+  background-image: url("img/background.jpg");
   background-size: cover;
 }
 
