--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,10 @@ header {
 
 }
 
+.pricing-desc > h1 {
+  font-size: 2.25rem;
+}
+
 .container > .pricing-desc > p {
   padding-top: 20px;
 }
@@ -451,6 +455,10 @@ header {
   flex-direction: column;
   align-items: center;
   margin: 50px;
+}
+
+.heading > h1 {
+  font-size: 2.25rem;
 }
 
 .container > .heading > p {
